deploy/app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-stable
  namespace: dev
  labels:
    app: webapp
spec:
  selector:
    app: webapp
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-canary
  namespace: dev
  labels:
    app: webapp
spec:
  selector:
    app: webapp
  ports:
  - name: http
    port: 8080
    targetPort: 8080
